tests/paczka1/fuzzy1/71831844.err
Error in line 1: reVNdmMlAo A843 10,6
Error in line 3: 0pYIJkn A261 42,5
Error in line 2: reVNdmMlAo S682 91,9
Error in line 5: 0pYIJkn A939 70,4
Error in line 7: Ew1iZslpj A843 66,9
Error in line 25: 03uCq6kZy S682 -4,4
Error in line 23: d2YbuunS A939 33,3
Error in line 31: reVNdmMlAo S682 34,4
Error in line 19: 03uCq6kZy S682 90,9
